--- a/Resources/Prototypes/Entities/Mobs/NPCs/carp.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/carp.yml
@@ -380,7 +380,7 @@
           Base: dead
           BaseUnshaded: dead_mouth
     - type: Body
-      prototype: Bloodsucker
+      prototype: SharkMinnow #Shitmed Change
       requiredLegs: 1
     - type: Butcherable
       spawned:
